[gd_scene load_steps=3 format=3 uid="uid://kc5b0ugt4nvp"]

[ext_resource type="Script" uid="uid://dxovf14ex5jby" path="res://weapon_slot.gd" id="1_ret86"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ret86"]
radius = 346.20804

[node name="WeaponSlot" type="Area2D"]
script = ExtResource("1_ret86")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ret86")

[connection signal="shoot" from="." to="." method="_on_shoot"]
[connection signal="stop_shoot" from="." to="." method="_on_stop_shoot"]
